# Login-Blockchain

./: Cargo.toml  README.md
meta/: Cargo.toml
meta/src/: main.rs
output/: nft-login-project.abi.json  nft-login-project.mxsc.json
scenarios/: nft_login_project.scen.json
src/: Migration.rs  authentication.rs  nft_login_project.rs
tests/: nft_login_project_scenario_go_test.rs  nft_login_project_scenario_rs_test.rs
wallet/: wallet.pem
wasm/: Cargo.toml
wasm/src/: lib.rs
