[package]
name = "nft-login-project"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/nft_login_project.rs"

[dependencies.multiversx-sc]
version = "0.54.6"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.54.6"

[workspace]
members = [
    ".",
    "meta",
]
